[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:src/btmonitor/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
ignore = IF100
exclude = docs

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py
